--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
     "autoload": {
         "psr-4": {"App\\":"src/"}
     },
-    "require": {}
+    "require": {
+        "ehime/hello-world": "^1.0"
+    }
 }
